# ubademy-back-py

./: .coveragerc  .coveralls.yml  .env.sample  .flaskenv  .gitignore  .travis.yml  Dockerfile  Procfile  README.md  docker-compose.yml  entrypoint.py  heroku.yml  logging.conf  pyproject.toml  requirements.txt  run.sh
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 01fdd5f3c2c4_added_collaborator_relationship.py  15d39f9984b6_init_user_and_course_dbs_added_creator_.py  1a955adcdbfc_extra_info_on_student_table.py  230398c3b7e0_added_deletes_on_cascade.py  38757e853e8a_rename_student_table.py  43cb77898ee1_added_subscription_and_user_.py  43da115dd3f4_add_title_and_description_to_lesson_.py  534f0aa2f556_init_modification_of_collaborator_.py  6816ba8dcc84_initial_db_s_and_relations_between_.py  8b17af98717a_add_active_property_to_exam_entity.py  ab2d2638ee71_added_subscription_id_required_to_.py  c15fcbccb3e3_blocked_column_in_user_table.py  cb5da1e602f3_added_course_structure_for_lessons_.py  d9dc732d614e_added_enroll_course_exam_table_to_.py  f46d0d90262d_added_answer_table_and_relation_with_.py  ffea6616a1aa_added_some_user_profile_information_to_.py
app/: main.py
app/common/: error_handling.py
app/config/: default.py
app/core/: config.py
app/courses/: models.py
app/crud/: __init__.py  base.py  crud_collaborator.py  crud_course.py  crud_enroll_course.py  crud_enroll_course_exam.py  crud_exam.py  crud_lesson.py  crud_subscription.py  crud_user.py
app/db/: base.py  base_class.py  session.py
scripts/: init.sql
tests/: conftest.py
(+69 files in other folders)
