[tool.poetry]
name = "Ubademy back py"
version = "1.0.0"
description = "Ubademy backoffice in python to handle"
authors = ["classmates"]


[tool.poetry.dependencies]
python = "3.9"
uvicorn = "~0.15.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email","dotenv"], version = "~1.8.2"}
requests = "^2.26.0"
SQLAlchemy = "^1.4.25"
psycopg2 = "^2.8.5"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]
fastapi = "^0.68.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"